--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,13 @@ name = "textris"
 repository = "https://github.com/ryym/textris"
 version = "0.2.0"
 
+# [[bin]]
+# name = "tmp"
+# path = "src/tmp.rs"
+
 [dependencies]
 error-chain = "0.12.0"
+failure = "0.1.2"
 getopts = "0.2.18"
 rand = "0.5.4"
 termion = "1.5.1"
