chore: Build with Rust 2018!! (beta)
https://blog.rust-lang.org/2018/10/30/help-test-rust-2018.html

[ci skip]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 authors = ["ryym <ryym.64@gmail.com>"]
 categories = ["games"]
 description = "Tetris on terminal!"
+edition = "2018"
 keywords = ["tetris"]
 license = "MIT OR Apache-2.0"
 name = "textris"
