--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT OR Apache-2.0"
 name = "textris"
 repository = "https://github.com/ryym/textris"
 version = "0.2.0"
+edition = "2018"
 
 [dependencies]
 failure = "0.1.2"
